--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "dependencies": {
     "basic-auth": "^1.0.3",
-    "basic-auth-connect": "^1.0.0",
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "request": "^2.69.0",
